--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,11 @@
-
-
+<div id="slideShowHome">
+<img  class="fotosShow" src="../../assets/images/fotoSlideShow3.jpg" >
+<img  class="fotosShow" src="../../assets/images/fotoSlideShow4.jpg">
+<img  class="fotosShow" src="../../assets/images/fotoSlideShow5.jpg">
+<img  class="fotosShow" src="../../assets/images/fotoSlideShow6.jpg">
+<img  class="fotosShow" src="../../assets/images/fotoSlideShow7.jpg">
+<img  class="fotosShow" src="../../assets/images/fotoSlideShow8.jpg">
+<img  class="fotosShow" src="../../assets/images/fotoSlideShow9.jpg">
+<img  class="fotosShow" src="../../assets/images/fotoSlideShow1.jpg0">
+</div>
 
