delete two picture files

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,6 @@
 <img  class="fotosShow" src="../../assets/images/fotoSlideShow7.jpg">
 <img  class="fotosShow" src="../../assets/images/fotoSlideShow8.jpg">
 <img  class="fotosShow" src="../../assets/images/fotoSlideShow9.jpg">
-<img  class="fotosShow" src="../../assets/images/fotoSlideShow1.jpg0">
+<img  class="fotosShow" src="../../assets/images/fotoSlideShow10.jpg">
 </div>
 
