--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,12 @@
     <div class="homeLinksBox" id="costo"></div>
     <div class="homeLinksBox" id="contacto"></div>
   </section>
-
 </div>
+
+<footer>
+<div>
+</div>
+</footer>
 
 </body>
 </html>
